--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
-/test-DG-RPG-F/bin
-/test-DG-RPG-F/obj
-/test-DG-RPG-F.user-settings.xml
+### SublimeText ###
+*.sublime-workspace
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# App specific
+
+node_modules/
+.tmp
+dist
+/src/main.js
